Updated the dependencies to the latest stable versions.